--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/plugin-users-permissions": "4.0.7",
     "@strapi/provider-upload-cloudinary": "^4.0.7",
     "@strapi/strapi": "4.0.7",
+    "next-seo": "^5.5.0",
     "pg": "8.6.0",
     "pg-connection-string": "^2.5.0"
   },
