--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spm-strapi-api-pb",
+  "name": "spm-strapi-api-pbw",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
